--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsencrypt",
+  "name": "pandora-jsencrypt",
   "version": "3.0.0-rc.1",
   "description": "A Javascript library to perform OpenSSL RSA Encryption, Decryption, and Key Generation.",
   "license": "MIT",
@@ -25,35 +25,35 @@
   "homepage": "http://www.travistidwell.com/jsencrypt",
   "repository": {
     "type": "git",
-    "url": "git://github.com/travist/jsencrypt.git"
+    "url": "git@github.com:kingller/jsencrypt.git"
   },
   "bugs": {
     "url": "http://github.com/travist/jsencrypt/issues"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-copy": "^1.0.1",
-    "gulp-eslint": "^4.0.2",
+    "gulp-copy": "^4.0.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-insert": "^0.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
-    "gulp-wrap": "^0.13.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-tslint": "^8.1.4",
+    "gulp-typescript": "^5.0.1",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1",
+    "gulp-wrap": "^0.15.0",
     "mocha": "^5.0.1",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "ts-loader": "^3.2.0",
-    "tslib": "^1.8.1",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "tslib": "^2.1.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.5.0"
   },
-  "dependencies": {},
   "typings": "declarations/src/index.d.ts"
 }
