--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pandora-jsencrypt",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0-rc.1.beta",
   "description": "A Javascript library to perform OpenSSL RSA Encryption, Decryption, and Key Generation.",
   "license": "MIT",
   "main": "bin/jsencrypt.js",
