--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
+.dccache
 _site
 .idea
+.bundle
 .DS_Store
 node_modules
 *.pem
 project.properties
 project.xml
 /nbproject/private/
+vendor
 
 src/*.js
 src/*.js.map
