--- a/package.json
+++ b/package.json
@@ -1,59 +1,68 @@
 {
-  "name": "pandora-jsencrypt",
-  "version": "3.0.0-rc.1",
-  "description": "A Javascript library to perform OpenSSL RSA Encryption, Decryption, and Key Generation.",
-  "license": "MIT",
-  "main": "bin/jsencrypt.js",
-  "scripts": {
-    "prepublish": "node_modules/gulp/bin/gulp.js"
-  },
-  "contributors": [
-    {
-      "name": "Travis Tidwell",
-      "email": "travis@form.io",
-      "url": "http://github.com/travist"
+    "name": "pandora-jsencrypt",
+    "type": "module",
+    "version": "3.3.1",
+    "description": "A Javascript library to perform OpenSSL RSA Encryption, Decryption, and Key Generation.",
+    "main": "bin/jsencrypt.js",
+    "module": "lib/index.js",
+    "browser": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "dependencies": {},
+    "devDependencies": {
+        "@types/expect": "^24.3.0",
+        "@types/mocha": "^10.0.0",
+        "@types/node": "^18.11.4",
+        "chai": "^4.3.6",
+        "dirty-chai": "^2.0.1",
+        "fs-jetpack": "^5.1.0",
+        "mocha": "^10.0.0",
+        "process": "^0.11.10",
+        "ts-mocha": "^10.0.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.2.4",
+        "url": "^0.11.0",
+        "webpack": "^5.35.1",
+        "webpack-cli": "^4.6.0"
     },
-    {
-      "name": "Antonio",
-      "url": "https://github.com/zoloft"
+    "files": [
+        "bin",
+        "lib"
+    ],
+    "scripts": {
+        "build:dev": "tsc && tsc --project tsconfig-def.json && webpack",
+        "build:test": "tsc && tsc --project tsconfig-def.json && webpack --config webpack.test.js",
+        "build:prod": "tsc && tsc --project tsconfig-def.json && webpack --config webpack.prod.js",
+        "build": "npm run build:dev && npm run build:test && npm run build:prod",
+        "serve": "bundle exec jekyll server --config _config.build.yml",
+        "test": "ts-mocha test/test.rsa.js"
     },
-    {
-      "name": "Julio",
-      "url": "https://github.com/jmgaya"
-    }
-  ],
-  "homepage": "http://www.travistidwell.com/jsencrypt",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:kingller/jsencrypt.git"
-  },
-  "bugs": {
-    "url": "http://github.com/travist/jsencrypt/issues"
-  },
-  "devDependencies": {
-    "expect.js": "^0.3.1",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-copy": "^4.0.1",
-    "gulp-eslint": "^6.0.0",
-    "gulp-insert": "^0.5.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^5.0.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1",
-    "gulp-wrap": "^0.15.0",
-    "mocha": "^5.0.1",
-    "rollup": "^0.56.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "ts-loader": "^3.2.0",
-    "tslib": "^2.1.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.2.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.5.0"
-  },
-  "typings": "declarations/src/index.d.ts"
+    "author": "Travis Tidwell <travis@form.io>",
+    "contributors": [
+        {
+            "name": "Travis Tidwell",
+            "email": "travis@form.io",
+            "url": "http://github.com/travist"
+        },
+        {
+            "name": "Antonio",
+            "url": "https://github.com/zoloft"
+        },
+        {
+            "name": "Julio",
+            "url": "https://github.com/jmgaya"
+        },
+        {
+            "name": "Taehyun Hwang",
+            "url": "https://github.com/HwangTaehyun"
+        }
+    ],
+    "homepage": "http://www.travistidwell.com/jsencrypt",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:kingller/jsencrypt.git"
+    },
+    "bugs": {
+        "url": "http://github.com/travist/jsencrypt/issues"
+    },
+    "license": "MIT"
 }
