--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,30 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es5",
-    "lib": [ "es2015.promise", "es5", "dom", "scripthost", "es2015.iterable" ],
-    "sourceMap": true,
-    "jsx": "react",
-    "experimentalDecorators": true,
-    "declaration": true,
-    "declarationDir": "./declarations",
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+    "module": "esnext",                          /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+    "lib": ["es2015","dom"],                  /* Specify library files to be included in the compilation. */
+    "outDir": "lib",                          /* Redirect output structure to the directory. */
+    "rootDir": "src",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "strict": true,                           /* Enable all strict type-checking options. */
     "strictNullChecks": false,
-    "importHelpers": true,
-    "noEmitHelpers": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "resolveJsonModule": true,
+    "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "skipLibCheck": true,                     /* Skip type checking of declaration files. */
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": [
-    "node_modules",
-    "_site",
-    "declarations"
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": [
+    "src/*.ts",
+    "src/*.js",
+    "src/**/*.ts",
+    "src/**/*.js"
   ],
-  "baseUrl": "."
+  "exclude": [
+    "node_modules"
+  ]
 }
