--- a/package.json
+++ b/package.json
@@ -1,40 +1,24 @@
 {
     "name": "pandora-jsencrypt",
-    "type": "module",
-    "version": "3.3.1",
+    "version": "3.3.2-dev",
     "description": "A Javascript library to perform OpenSSL RSA Encryption, Decryption, and Key Generation.",
     "main": "bin/jsencrypt.js",
-    "module": "lib/index.js",
-    "browser": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "dependencies": {},
     "devDependencies": {
-        "@types/expect": "^24.3.0",
-        "@types/mocha": "^10.0.0",
-        "@types/node": "^18.11.4",
-        "chai": "^4.3.6",
-        "dirty-chai": "^2.0.1",
-        "fs-jetpack": "^5.1.0",
-        "mocha": "^10.0.0",
-        "process": "^0.11.10",
-        "ts-mocha": "^10.0.0",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.2.4",
-        "url": "^0.11.0",
-        "webpack": "^5.35.1",
-        "webpack-cli": "^4.6.0"
+        "gulp": "5.0.0",
+        "gulp-concat": "^2.6.0",
+        "gulp-eslint": "6.0.0",
+        "gulp-insert": "^0.5.0",
+        "gulp-rename": "2.0.0",
+        "gulp-uglify": "3.0.2",
+        "gulp-watch": "5.0.1",
+        "gulp-wrap": "0.15.0"
     },
     "files": [
         "bin",
         "lib"
     ],
     "scripts": {
-        "build:dev": "tsc && tsc --project tsconfig-def.json && webpack",
-        "build:test": "tsc && tsc --project tsconfig-def.json && webpack --config webpack.test.js",
-        "build:prod": "tsc && tsc --project tsconfig-def.json && webpack --config webpack.prod.js",
-        "build": "npm run build:dev && npm run build:test && npm run build:prod",
-        "serve": "bundle exec jekyll server --config _config.build.yml",
-        "test": "ts-mocha test/test.rsa.js"
+        "prepublishOnly": "node_modules/gulp/bin/gulp.js"
     },
     "author": "Travis Tidwell <travis@form.io>",
     "contributors": [
