add encryptOAEP to support encrypt with padding: RSA_PKCS1_OAEP_PADDING and oaepHash: sha256

--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "bugs": {
         "url": "http://github.com/travist/jsencrypt/issues"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org"
+    }
 }
